# YAIPR

./: Cargo.toml  LICENSE.txt  readme.md  sample-file.ini
Documentation/: YAIPR.puml
src/: parser.rs  section.rs  sectionlist.rs
src/sectionlist/: section.rs
