[package]
name = "yaipr"
version = "0.1.0"
authors = ["ThirtySomething <developer@derpaul.net>"]
edition = "2018"
homepage = "https://www.derpaul.net"
repository = "https://github.com/ThirtySomething/YAIPR"
license-file = "LICENSE.txt"
keywords = ["ini parser", "ini", "parser", "rust"]
categories = ["development-tools", "development-tools::cargo-plugins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex="1.3.7"

[lib]
name = "yaipr"
path = "src/parser.rs"
edition = "2018"
crate-type = ["dylib"]
